--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "zstream-server",
+  "description": "A music streaming server written from scratch to stream your home library",
   "version": "0.0.1",
-  "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "node ./bin/zstream",
     "css": "./node_modules/.bin/postcss -d static/css -w static/rawcss static/rawcss/*.css --use autoprefixer"
   },
   "files": [
@@ -26,6 +26,5 @@
     "musicmetadata": "^2.0.5",
     "postcss-middleware": "^1.1.3",
     "serve-favicon": "~2.3.0"
-  },
-  "devDependencies": {}
+  }
 }
