Fixed package.json and bumped version

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "zstream-server",
   "description": "A music streaming server written from scratch to stream your home library",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "scripts": {
     "start": "node ./bin/zstream",
     "css": "./node_modules/.bin/postcss -d static/css -w static/rawcss static/rawcss/*.css --use autoprefixer"
@@ -10,7 +10,8 @@
     "src",
     "bin",
     "static",
-    "views"
+    "views",
+    "app.js"
   ],
   "bin": {
     "zstream": "./bin/zstream"
