--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "start": "node ./bin/zstream",
-    "css": "./node_modules/.bin/postcss -d static/css -w static/rawcss static/rawcss/*.css --use autoprefixer"
+    "css": "./node_modules/.bin/postcss -d static/css -w static/rawcss static/rawcss/*.css --use autoprefixer",
+    "lint": "eslint app.js src static/js"
   },
   "files": [
     "src",
@@ -21,12 +22,19 @@
     "autoprefixer": "^6.7.2",
     "body-parser": "^1.16.0",
     "chalk": "^1.1.3",
+    "compression": "^1.7.2",
     "cookie-parser": "~1.4.3",
     "express": "^4.14.1",
+    "font-awesome": "^4.7.0",
     "hbs": "~4.0.0",
+    "materialize-css": "^0.100.2",
     "mime-types": "^2.1.14",
+    "modern-normalize": "^0.4.0",
     "musicmetadata": "^2.0.5",
     "postcss-middleware": "^1.1.3",
     "serve-favicon": "~2.3.0"
+  },
+  "devDependencies": {
+    "eslint": "^4.19.1"
   }
 }
