Tweaked eslint rules

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,10 @@
         "semi": [
             "error",
             "always"
+        ],
+        "arrow-parens": [
+            "error",
+            "as-needed"
         ]
     }
 }
