--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "express": "^4.14.1",
     "font-awesome": "^4.7.0",
     "hbs": "~4.0.0",
-    "materialize-css": "^0.100.2",
+    "jquery": "^3.3.1",
+    "material-icons": "^0.2.3",
+    "materialize-css": "^1.0.0-rc.1",
     "mime-types": "^2.1.14",
     "modern-normalize": "^0.4.0",
     "musicmetadata": "^2.0.5",
