--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "materialize-css": "^1.0.0-rc.1",
     "mime-types": "^2.1.14",
     "modern-normalize": "^0.4.0",
-    "musicmetadata": "^2.0.5",
+    "music-metadata": "^4.8.0",
     "postcss-middleware": "^1.1.3",
     "serve-favicon": "~2.3.0"
   },
