--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn lint"
+      "pre-commit": "npm run lint"
     }
   },
   "files": [
@@ -39,7 +39,7 @@
     "modern-normalize": "^0.4.0",
     "music-metadata": "^4.8.0",
     "postcss-middleware": "^1.1.3",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
